--- a/style.css
+++ b/style.css
@@ -3669,17 +3669,31 @@ li.widget {
   opacity: 1.0;
   top: -5px;
 }
-.home .current-user-info {
-  background-color: #fff;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px;
-  -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px;
-  box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px;
-  padding: 0.75em 0.75em;
-  margin-bottom: 1.5em;
+.home .current-event h2 {
+  font-size: .9em;
+  margin: 0;
+  color: #697273;
 }
-.home .current-user-info h2 {
-  font-size: 1.28571em;
-  font-weight: normal;
+.home .current-event .event-title {
+  font-size: 1.1em;
+  font-weight: bolder;
+  margin-bottom: 5px;
+}
+.home .current-event .meta li {
+  display: inline;
+  font-size: .9em;
+  /* Hide location info - no vertical space! */
+}
+.home .current-event .meta li::after {
+  display: inline-block;
+  margin: 0 2px;
+  content: "∙";
+}
+.home .current-event .meta li:nth-child(2) {
+  display: none;
+}
+.home .current-event .meta li:last-child::after {
+  content: "";
 }
 .home .user-area form {
   background-color: #fff;
